another js file with fetch and .then() code

--- a/Fetch promise api/fetch_cardProj.html
+++ b/Fetch promise api/fetch_cardProj.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>User Card</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="card.css" />
   </head>
   <body>
     <div class="card-container">
@@ -16,6 +16,6 @@
     </div>
     
 
-    <script src="fetch_cardProj.js"></script>
+    <script src="fetchCARD_projWithFetch.js"></script>
   </body>
 </html>
